+ complete: Did the right folder structure, any advancements will come later
